--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @import "reset.css";
 body {
-  background-color: #f6f9fc;
+  background-color: wheat;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
@@ -18,14 +18,14 @@ body {
 }
 
 .controls {
-  margin-top: 80px;
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .controls .controls__btns {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .controls__btns button {
@@ -53,8 +53,8 @@ body {
 }
 
 .controls__colors .controls__color {
-  width: 50px;
-  height: 50px;
+  width: 80px;
+  height: 80px;
   border-radius: 25px;
   cursor: pointer;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
